# demo

./: .gitignore  commands.txt  pyproject.toml  requirements.txt
ProcessMatching/: ProcessMatching.py
config/calibration/: LLM.json  calibration_data_dazu.json  calibration_data_duco_dazu.json  calibration_data_ur.json  nail_positions_data.json  recorded_joint_points_data.json  recorded_points_data.json  tool_offset_data.json
logs/: logger_utils.py
prompt_flows/: 位置标定流程.txt  位置调整流程.txt  到初始点流程.txt  到记录点流程.txt  拧螺套演示流程.txt  深度标定流程.txt  深度调整流程.txt  螺钉标定流程.txt  螺钉调整流程.txt  角度标定流程.txt  角度调整流程.txt  记录点流程.txt  连接流程.txt
tools/: __init__.py  mcp_client.py  mcp_server.py
tools/algorithms/: __init__.py  algorithms.py  algorithms_mcp_tools.py  angle_calculations.py
tools/io_modules/: __init__.py  device_controllers.py  io_controller.py  io_tools.py
tools/robots/: __init__.py  robot_abstraction.py  robot_tools.py
tools/robots/.claude/: settings.local.json
tools/robots/Duco/: DucoCobot.py  __init__.py
tools/robots/Duco/gen_py/robot/: RPCRobot-remote  RPCRobot.py  ttypes.py
tools/robots/URBasic/: __init__.py  connectionState.py  dashboard.py  realTimeClient.py  robotConnector.py  robotModel.py  rtde.py  rtdeConfigurationDefault.xml  urScript.py  urScriptExt.py
tools/vision/: VisionApi.py  __init__.py  vision_mcp_tools.py
