[project]
name = "nonead-universal-robots-mcp"
version = "0.1.0"
description = "Nonead Universal Robots MCP - A Model Context Protocol server for controlling Universal Robots with AI integration"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "mcp[cli]>=1.3.0",
    "numpy>=1.21.0",
    "thrift>=0.16.0",
    "fastmcp>=2.10.0",
    "openai>=1.9.0"
]

[project.scripts]
nonead-universal-robots-mcp = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"tools.robots.URBasic" = ["rtdeConfigurationDefault.xml"]